--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
             </p>
             <div class="contact">
                 <div class="links-contact">
-                    <a href="https://wa.me/01098797684" target="_blank" title="01098797684"><i class="fa-brands fa-whatsapp"></i></a>
-                    <a href="https://www.facebook.com/khaled.elpop.718/about_overview" target="_blank" title="Khaled Soliman">
+                    <a href="https://wa.me/+201098797684" target="_blank" title="01098797684"><i class="fa-brands fa-whatsapp"></i></a>
+                    <a href="https://www.facebook.com/khaled.elpop.718?mibextid=ZbWKwL" target="_blank" title="Khaled Soliman">
                         <i class="fa-brands fa-facebook"></i>
                     </a>
                     <a href="https://www.instagram.com/kh_elansary/" target="_blank" title="Kh_Elansary"><i class="fa-brands fa-instagram"></i></a>
